--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,23 +3,48 @@
      color: #000;
      background-color: #999797;
      font-family: 'Old Standard TT', serif;
-     width: 100%;     
+     width: 100%;
      height: 100%;
-     
+
  }
- 
+.image_catalog {
+    width: 250px;
+    height: 250px;
+    color: white;
+    padding: 0px;
+    border-radius: 15%;
+}
+.img-thumbnail {
+    display: inline-block;
+    max-width: 100%;
+    height: 250px;
+    /* padding: 4px; */
+    line-height: 1.42857143;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    -webkit-transition: all .2s ease-in-out;
+    -o-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
+}
+
  .image {
-     width: 360px;
      height: 250px;
+     color:white;
  }
- 
+b, strong {
+    font-weight: 700;
+    color: black;
+}
+
 pre {
   font-family: sans-serif, helvetica, arial;
-  white-space: pre-wrap;       /* css-3 */
-  white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
-  white-space: -pre-wrap;      /* Opera 4-6 */
-  white-space: -o-pre-wrap;    /* Opera 7 */
+  white-space: pre-line;       /* css-3 */
+  white-space: -moz-pre-line;  /* Mozilla, since 1999 */
+  white-space: -pre-line;      /* Opera 4-6 */
+  white-space: -o-pre-line;    /* Opera 7 */
   word-wrap: break-word;       /* Internet Explorer 5.5+ */
+  word-break: break-word;
 }
 
  .sidenav {
@@ -35,7 +60,7 @@ pre {
      transition: 0.5s;
      padding-top: 60px;
  }
- 
+
  .sidenav a {
      padding: 8px 8px 8px 32px;
      text-decoration: none;
@@ -45,12 +70,12 @@ pre {
      -webkit-transition: 0.3s;
      transition: 0.3s;
  }
- 
+
  .sidenav a:hover,
  .offcanvas a:focus {
      color: #f1f1f1;
  }
- 
+
  .sidenav .closebtn {
      position: absolute;
      top: 0;
@@ -58,13 +83,13 @@ pre {
      font-size: 36px;
      margin-left: 50px;
  }
- 
+
  #main {
      -webkit-transition: margin-left .5s;
      transition: margin-left .5s;
      padding: 16px;
  }
- 
+
  .jumbotron-billboard .img {
      margin-bottom: 0px;
      opacity: 0.2;
@@ -79,18 +104,18 @@ pre {
      left: 0;
      z-index: 1;
  }
- 
+
  .jumbotron {
      position: relative;
      padding: 50px;
  }
- 
+
  .jumbotron .container {
      z-index: 2;
      position: relative;
      z-index: 2;
  }
- 
+
  @media screen and (max-height: 450px) {
      .sidenav {
          padding-top: 15px;
@@ -98,4 +123,21 @@ pre {
      .sidenav a {
          font-size: 18px;
      }
+     pre {
+        white-space: pre-line;
+        font-size: 10px;
+        }
  }
+
+@media only screen and (max-width: 500px) {
+    body {
+    }
+ pre {
+        white-space: pre-line;
+        font-size: 10px;
+        word-break: break-word;
+        }
+ strong {
+        font-size: 17px;
+}
+}
